Fixed vertical spacing on projects page

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -142,6 +142,15 @@ footer {
 
 
 /* Project Page */
+.projects-container {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  min-height: 100vh;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+}
+
 /* Cards */
 .cards-container {
   width: 100%;
@@ -152,7 +161,7 @@ footer {
   justify-items: center;
   align-items: center;
   column-gap: 40px;
-  row-gap: 40px;
+  padding-bottom: 40px;
 }
 
 .card {
@@ -161,6 +170,7 @@ footer {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition-duration: 150ms;
   transition-timing-function: ease-in;
+  padding-top: 40px;
 }
 
 .card:hover {
